app/static/css/app.css
body {
    padding-top: 5rem;
    font-family: 'Lato', sans-serif;
}

.homebackground{
    background-image: url(../background.png/);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

footer{
    text-align: center;
    color: white;
    /* background-color: #00406E; */
}

.push{
    height: 100px;
}

.login-form form{
    background-color: white;
    text-align: center;
    width: 40vw;
    box-shadow: 0px 0px 5px 2px #4cbff5c0;
    margin: auto;
    padding: 50px;
}



.sign-up-form{
    background-color: white;
    width: 40vw;
    box-shadow: 0px 0px 5px 2px #4cbff5c0;
    margin: auto;
    padding: 50px;
}

.sign-up-form h2{
    text-align: center;
}

.loginlogo{
    width: 6rem;
    height: 6rem;    
}

#website_logo{
    width: 10rem;
    height: 2rem;
}

#viewer-profile, #logout-icon{
    width: 1rem;
    height: 1rem;
}

.recorder{
    padding-top: 15px;
}

.recorder-btn{
    border-radius: 50%;
    outline: none;
    border: none;
    padding:5%;
    width: 12rem;
    height: 12rem;
    cursor: pointer;
    font-size: 100px;
    margin: 0;
}

.recorder-btn i{
    text-align: center;
    margin: auto;
}


.recorder-btn:where(#stop){
    box-shadow: 0 0 0 0 rgb(253, 128, 128, 0.7);
	transform: scale(1);
	animation: pulse 2s infinite;
}

.recorder-btn i{
    display: flex;
    justify-content: center;
    align-items: center;  
}

@keyframes pulse {
	0% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgb(253, 128, 128, 0.7);
	}

	70% {
		transform: scale(1);
		box-shadow: 0 0 0 10px rgb(253, 128, 128, 0);
	}

	100% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgb(253, 128, 128, 0);
	}
}




#mic{
    outline: none;
    background-color: #009BDE;
    color: white;
}

#mic:hover{
    background-color: #016a97;
}

#stop{
    outline: none;
    background-color: #fa97a4;
    color: red;
}

#stop:hover{
    background-color: #f36a7c;
    color: white;
}

#submit{
    /* outline: none;
    background-color: #55D00A;
    color: white; */
    display: none;
}


.forget-password{
    text-align: right;
}

.home{
    text-align: center;
    color:#00406E;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}


.team-galactech{
    text-align: center;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 30px;
}

.team-profile-icon{
width: 11rem;
height: 11rem;
}

.profile-div{
    display: grid;
    grid-template-columns: 2fr 3fr;
    border:  1px solid rgb(219, 219, 219) ;
    box-shadow: 0px 0px 12px rgb(207, 207, 207);
    margin: auto;
    width: 80%;
}

#profile-header{
    text-align: center;
}


.profile-letter-bg{
    background: linear-gradient(-45deg, #8ba0ff, #8337fd, #23a6d5, #23d5ab);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
    outline: none;
    border: none;
    justify-content: center;
    text-align: center;
    color: white;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.profile-letter-bg h1{
    font-size: 250px;
    height: 100%;
}

.user-details{
    margin: auto 25px;
    line-height: 1.5;
    font-size: 20px;
}

/* .profile-letter-bg h1{
   padding: 50%;
} */


.audio-upload{
    padding-top: 40px;
}

.audio-upload section{
   border: 2px dashed #00406E;
   padding: 20px;
   max-width: 60%;
   border-radius: 2px;
   margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
}

.drag-and-drop.active{
border: 2px solid #00406E;
box-shadow: 0px 0px 20px rgb(102, 255, 255);
}

#accent-page{
    top: 50%;
    left: 50%;
    width: 100%;
    text-align: center;
}

.drag-and-drop button{
    width: 30%;
}

.drag-and-drop span{
    color: #00406E;
    margin: 6px 0 8px 0;
  }

.drag-and-drop .icon{
    font-size: 30px;
    color: rgb(0, 79, 116);
  }

.uploaded-audio{
    background-color: #00406E;
    opacity: 1;
    transition: .5s ease;
    backface-visibility: hidden;
    border: none;
    color: white;
    outline: none;
    width: 30%;
    border-radius: 5px;
    margin-right: 0px !important;
    position: relative;
}



.change-display{
    margin-left: 0px !important;
}

.change-display-two{
    display: flex;
}

.change-display-two section{
    height: 170px !important;
}

.change-display-two .drag-and-drop{
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    border-left: 2px solid #00406E;
    width: 60rem;
}

.change-display-two .uploaded-audio{
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

.uploaded-audio .icon{
    font-size: 50px;
    color: #ffffff;
}


.remove-audio{
    display: flex;
    margin: auto;
    width: 30px;
    text-align: center;
    top: 50%;
    left: 50%;
    position: absolute;
    top: 12px;
    right: -106px;
}

.remove-audio i{
    transition: .1s ease;
    opacity: 0;
    font-size: 22px;
    color: white;
}

.remove-audio:hover i{
    color: #e9a4ad;
}

.uploaded-audio:hover .remove-audio i{
    opacity: 1;
}

.submit-audio{
    display: flex;
    gap: 30px;
    text-align: center;
    justify-content: center;
    align-items: center;
}

.submit-audio button{
    border-radius: 50%;
    outline: none;
    border: none;
    /* padding:5%; */
    width: 30px;
    height: 30px;
    cursor: pointer;
    font-size: 15px;
    margin: 0;
}

.submit-audio p{
    margin: auto 0;
}

.recording{
    padding-top: 50px;
}

#recordingsList{
    list-style: none;
}

.delete-modal{
    z-index: 1;
    position: fixed;
    background-color: #424242;
    width: 100%;
    height: 100%;
    left:0;
    top:0;
    padding: 100px;
}

.modal-content{
    margin: auto;
    background-color: white;
    height: auto;
    width: 50%;
    text-align: center;
}

.modal-header{
    text-align:center;
}

.close-modal{
    position: absolute;
    font-size: 25px;
    top: 10px;
    right: 30px;
}

.close-modal i{
    color:#00406E;
}

.close-modal:hover i{
    color: red;
    cursor: pointer;
}

.modal-header-icon{
    font-size: 60px;
    color: rgb(250, 81, 81);
}

.delete-header{
    padding: 16px;
}

.delete-header h4{
    padding-top: 15px;
}

.delete-mic-audio-icon{
    font-size: 20px;
}

.delete-mic-audio-icon:hover{
    color: rgb(250, 81, 81);
}

